Frontend_V2: Fix private tag overlap and column size on submissions page (#3674)

--- a/frontend_v2/src/app/components/challenge/challengeviewallsubmissions/challengeviewallsubmissions.component.scss
+++ b/frontend_v2/src/app/components/challenge/challengeviewallsubmissions/challengeviewallsubmissions.component.scss
@@ -103,17 +103,18 @@ tr.element-row.expanded-row {
 } 
 
 .elements-detail {
-  width: 45%;
+  width: 40%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
   border-right-style: solid;
   border-right-width: 1px;
   border-right-color: lightgrey;
+  margin-left: 50px;
 }
 
 .elements-action {
-  width: 20%;
+  width: 30%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
@@ -121,7 +122,7 @@ tr.element-row.expanded-row {
 }
 
 .elements-status {
-  width: 35%;
+  width: 30%;
   overflow: hidden;
   display: flex;
   flex-direction: column;
